User-visible changes in version 0.4.4:

* info about wxWidgets version in About box and --version switch for fityk-GUI. 

User-visible changes in version 0.4.3:

* wxWidgets 2.5 compatible
* data files (in addition to scripts) can be specified as command line 
  arguments to fityk-GUI. Scripts should either have .fit or .fityk extensions
  or start with "# Fityk" string. 
* crosshair cursor (GUI->Crosshair cursor)
* "Data->Load File" dialog (simple) allows to open many files 
* unix man page (Carlo Segre)

User-visible changes in version 0.4.2:

* "File" menu name was replaced with "Session", and "Manipulate" with "FindPeak"
* "s.info ^number" prints more informations.
* fixed problem with locales, that have decimal point different than dot. 
  Now LC_NUMERIC variable is ignored. (Vincent Favre-Nicolin)
* new configure flags: --enable-debug and --enable-optimization 
* ambiguous 'log(2)' in "export as function" was replaced by numeric value
  (in gnuplot log means natural log, in Excel log=log10). 
* program version is written in scripts (session dumps and log files) 
  and in configuration files

User-visible changes in version 0.4.1:

* two independent auxiliary plots (by default one is visible)
* implemented s.guess command that adjusts existing peak - also in peak pop-up 
  menu (based on patch sent by Jonathan Hunt)
* config file can store info, what windows are visible (see GUI->Show)

User-visible changes in version 0.4.0:

* multiple datasets in one plot
* multiple plots - all can be fitted simultaneously
* New menu items - GUI->Show->..., GUI->Scroll...

User-visible changes in version 0.3.4:

* enhanced peak dragging
* commands from ${HOME}/.fityk/init are executed on start-up
* added Data->Recent files->... to menu
* minor fixes

User-visible changes in version 0.3.3:

* Major changes in graphical interface (mouse usage, toolbar etc.)
* Added support for Siemens .raw data file format (Stefan Krumm) 

User-visible changes in version 0.3.2:
