@@ -1,5 +1,8 @@
 User-visible changes in version 0.4.4:
 
+* input field: up/down arrow keys work as in bash (wxComboBox was replaced
+  by wxTextCtrl)
+* optionally drawing sum and peaks as smooth curves (computed at every pixel)
 * info about wxWidgets version in About box and --version switch for fityk-GUI. 
 
 User-visible changes in version 0.4.3:
